Fix price overflow bug.

--- a/assets/css/style-woocommerce.css
+++ b/assets/css/style-woocommerce.css
@@ -1819,11 +1819,11 @@ body[class*="woocommerce"] #page div[class*="woocommerce"] h2 {
 .single-product #page #woocommerce-wrapper .product_title {
 	display: inline-block;
 	margin-bottom: 0;
-	width: 85%;
+	width: 60%;
 }
 
 .single-product #page #woocommerce-wrapper .price {
-	width: 15%;
+	width: 40%;
 	display: inline-block;
 	color: black;
 	text-align: right;
